Update index.html modih h2 221

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <h1>ligne1</h1>
     <h2>ajouter par branche cagnotte</h2>
-    <h3>baba ak maty</h3>
+    <h3>baba ak maty 221</h3>
+    221 221
 </body>
 </html>
